--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,70 @@
   color: #09d3ac;
 }
 
+.game_container {
+  display: flex;
+  justify-content:center;
+}
+
 .grid {
   display: grid;
   grid-template-rows: 200px 200px 200px;
   grid-template-columns: 200px 200px 200px;
 }
 
-.game_container {
+.box {
+  /*background: #444;*/
+  border: 1px solid #555;
   display: flex;
-  justify-content:center;
+  align-items: center;
+  justify-content: center;
+  color: #AAA;
+}
+
+.box p {
+  margin: 0;
+}
+
+.card {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  float:left; 
+  perspective: 500px;
+}
+
+.content:not(.no-hover) {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.card:not(.no-hover):hover .content:not(.no-hover) {
+  transform: rotateY( 180deg );
+  transition: transform 0.5s;
+}
+
+.front, .back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: white;
+  line-height: 200px;
+  color: #03446A;
+  text-align: center;
+  font-size: 24px;
+  backface-visibility: hidden;
+}
+
+.back:not(.no-hover) {
+  transform: rotateY( 180deg );
+  transition: transform 0.5s;
+}
+
+.back .no-hover{
+  display: hidden;
 }
