css styling kinda fixed, now adding scoreboards

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,14 @@
 
 .game_container {
   display: flex;
+  align-items: center;
   justify-content:center;
+}
+.score_container{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid {
@@ -65,7 +72,7 @@
 
 .card:not(.no-hover):hover .content:not(.no-hover) {
   transform: rotateY( 180deg );
-  transition: transform 0.5s;
+  transition: transform .5s;
 }
 
 .front, .back {
@@ -80,11 +87,11 @@
   backface-visibility: hidden;
 }
 
-.back:not(.no-hover) {
+.back {
   transform: rotateY( 180deg );
-  transition: transform 0.5s;
+  transition: transform .5s;
 }
 
-.back .no-hover{
-  display: hidden;
+.no-hover{
+  transform: none;
 }
